<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="20dp">

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:scaleType="centerCrop"
        android:adjustViewBounds="true"
        android:src="@drawable/user_avatar"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/user_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/avatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        app:endIconMode="clear_text"
        android:hint="@string/login"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        app:boxStrokeColor="@color/purple_500"
        app:boxStrokeWidth="3dp"
        app:boxCornerRadiusTopStart="14dp"
        app:boxCornerRadiusTopEnd="14dp"
        app:boxCornerRadiusBottomStart="14dp"
        app:boxCornerRadiusBottomEnd="14dp"
        app:counterEnabled="true"
        app:counterMaxLength="40">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
        />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/user_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/user_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:hint="@string/phone"
        style="@style/Widget.Material3.TextInputLayout.FilledBox"
        app:boxBackgroundColor="@color/purple_200"
        app:boxCornerRadiusTopStart="14dp"
        app:boxCornerRadiusTopEnd="14dp"
        app:prefixText="+"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:inputType="phone"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_phone"
        android:text="@string/gender_option"
        android:textAppearance="@style/textStyle"
        android:layout_marginTop="10dp"
    />
    <RadioGroup
        android:id="@+id/gender_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gender">

        <RadioButton
            android:id="@+id/female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"/>

        <RadioButton
            android:id="@+id/male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"/>
    </RadioGroup>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/receive_notification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/notifications"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gender_options">
    </com.google.android.material.switchmaterial.SwitchMaterial>

    <CheckBox
        android:id="@+id/device_authorization"
        style="@style/checkBoxStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:text="@string/authorization_agreement"
        app:errorShown="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/receive_notification">
    </CheckBox>

    <CheckBox
        android:id="@+id/news"
        style="@style/checkBoxStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/device_authorization"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/news"
        android:checked="false"
        app:errorShown="true">
    </CheckBox>

    <TextView
        android:id="@+id/points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/news"
        android:text="@string/points"
        android:textAppearance="@style/textStyle"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:id="@+id/points_int"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/news"
        android:text="@string/points_int"
        android:textAppearance="@style/pointsBarStyle"
        android:layout_marginTop="10dp"
        />

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/points_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/points"
        android:max="100"
        app:trackThickness="4dp"
        android:layout_marginTop="10dp"
        >
    </com.google.android.material.progressindicator.LinearProgressIndicator>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/points_bar"
        android:textColor="@color/white"
        android:layout_marginTop="15dp">
    </com.google.android.material.button.MaterialButton>
</androidx.constraintlayout.widget.ConstraintLayout>